[package]
name = "m100util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2"
anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "4.1.6", features = ["derive"] }
hex = "0.4.3"

[build-dependencies]
cc = "1.0"
